Bug 33638 - Pagination extension not localized in LibreOffice
Summary: Pagination extension not localized in LibreOffice
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Localization (show other bugs)
Version:
(earliest affected)
3.3.0 release
Hardware: x86-64 (AMD64) Windows (All)
: medium minor
Assignee: Not Assigned
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-01-28 02:21 UTC by Łukasz
Modified: 2013-11-24 17:57 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
little bug in Pagination appearance (44.29 KB, image/jpeg)
2011-01-28 02:23 UTC, Łukasz
Details
Pagination extension (32.62 KB, application/vnd.openofficeorg.extension)
2011-04-30 09:45 UTC, Andras Timar
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Łukasz 2011-01-28 02:21:47 UTC
There is a little problem with Pagination Extension in LibreOffice. It works fine, but after installation there is "Page Number..." option in Insert menu. It would be fine but I'm using Polish language, not English. In Polish language "Page Number..." option should appear as "Numery stron...". 
In OpenOffice.org 3.2.1 it is ok, Pagination appears as "Numery stron...". I'm sending screen from LibreOffice Writer. I don't know maybe other language versions have similar problem.

Steps to Reproduce:

Just install Pagination in Polish language version of LibO.


Build & Platform:

libreoffice-3.2.99.2 (3.3-beta2) on Windows XP SP3.
Comment 1 Łukasz 2011-01-28 02:23:24 UTC
Created attachment 42629 [details]
little bug in Pagination appearance
Comment 2 Andras Timar 2011-04-30 09:45:50 UTC
Created attachment 46195 [details]
Pagination extension

I attach the latest version of Pagination extension here, because http://extensions.services.openoffice.org is not very reliable these days.
Comment 3 Andras Timar 2011-04-30 09:51:23 UTC
Caolán, maybe you know how to solve it, or whether it is our bug or not.

When I change the xml:lang in Addon.xcu of the extension from language-COUNTRY to language (e.g. pl-PL to pl), then the menu item is localized. Somehow it does not fallback from language-COUNTRY to language.
Comment 4 Caolán McNamara 2011-05-23 04:32:54 UTC
I added an extra level of localized fallback for localized property strings to resolve this. (>= 3.5 only). There's a workaround for the addon author to use "pl" instead of "pl-PL" in the Addons.xcu. As per BCP-47, we should probably recommend using the shortest language tag which is correct in .xcu files.

http://cgit.freedesktop.org/libreoffice/libs-core/commit/?id=be49f936e3f4a9155e1c6a877132cdbc8af91589